// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField component rendering states should match snapshot - TextField (default focus): TextField default focus snapshot 1`] = `
<TextField
  helpText="Assistive text"
  id="field"
  label="Label"
  placeholder="Placeholder"
  theme={
    Object {
      "avatarSizes": Object {
        "large": Object {
          "fontSize": "1rem",
          "size": 48,
        },
        "small": Object {
          "fontSize": ".875rem",
          "size": 32,
        },
        "standard": Object {
          "fontSize": "1rem",
          "size": 40,
        },
        "tiny": Object {
          "fontSize": ".625rem",
          "size": 24,
        },
        "xlarge": Object {
          "fontSize": "1.5rem",
          "size": 80,
        },
      },
      "buttonSize": Object {
        "large": Object {
          "minHeight": 48,
          "paddingBottom": 8,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 8,
        },
        "medium": Object {
          "minHeight": 40,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        },
        "small": Object {
          "minHeight": 32,
          "paddingBottom": 4,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 4,
        },
      },
      "overrides": Object {
        "MuiAvatar": Object {
          "colorDefault": Object {
            "color": "#333333",
          },
        },
        "MuiButton": Object {
          "outlinedPrimary": Object {
            "color": "#333333",
          },
          "outlinedSecondary": Object {
            "color": "#333333",
          },
          "root": Object {
            "fontSize": "0.875rem",
            "minHeight": "40px",
            "padding": "8px 16px",
          },
          "sizeLarge": Object {
            "fontSize": "0.875rem",
            "minHeight": "48px",
          },
          "sizeSmall": Object {
            "fontSize": "0.875rem",
            "minHeight": "32px",
          },
        },
      },
      "palette": Object {
        "background": Object {
          "default": "#FFFFFF",
          "paper": "#FAFAFA",
        },
        "error": Object {
          "contrastText": "#333333",
          "main": "#E74627",
        },
        "primary": Object {
          "contrastText": "#333333",
          "dark": "#EF8426",
          "light": "#FEFDE8",
          "main": "#F4AB34",
        },
        "secondary": Object {
          "contrastText": "#333333",
          "dark": "#FF6B0B",
          "light": "#FFF8E1",
          "main": "#FF6B0B",
        },
        "success": Object {
          "main": "#569A32",
        },
        "text": Object {
          "disabled": "#EEEEEE",
          "hint": "#BBBBBB",
          "primary": "#333333",
          "secondary": "#777777",
        },
        "type": "light",
      },
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": 8,
      "typography": Object {
        "android": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "body1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "body2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 400,
        },
        "button": Object {
          "fontSize": "0.875rem",
          "fontWeight": 600,
        },
        "caption": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "h1": Object {
          "fontSize": "6rem",
          "fontWeight": 300,
        },
        "h2": Object {
          "fontSize": "3.75rem",
          "fontWeight": 300,
        },
        "h3": Object {
          "fontSize": "3rem",
          "fontWeight": 400,
        },
        "h4": Object {
          "fontSize": "2.125rem",
          "fontWeight": 400,
        },
        "h5": Object {
          "fontSize": "1.5rem",
          "fontWeight": 400,
        },
        "h6": Object {
          "fontSize": "1.25rem",
          "fontWeight": 600,
        },
        "iOS": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "overline": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "subtitle1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "subtitle2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 500,
        },
        "web": Object {
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
      },
    }
  }
/>
`;

exports[`TextField component rendering states should match snapshot - TextField (default hover): TextField default hover snapshot 1`] = `
<TextField
  helpText="Assistive text"
  id="field"
  label="Label"
  placeholder="Placeholder"
  theme={
    Object {
      "avatarSizes": Object {
        "large": Object {
          "fontSize": "1rem",
          "size": 48,
        },
        "small": Object {
          "fontSize": ".875rem",
          "size": 32,
        },
        "standard": Object {
          "fontSize": "1rem",
          "size": 40,
        },
        "tiny": Object {
          "fontSize": ".625rem",
          "size": 24,
        },
        "xlarge": Object {
          "fontSize": "1.5rem",
          "size": 80,
        },
      },
      "buttonSize": Object {
        "large": Object {
          "minHeight": 48,
          "paddingBottom": 8,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 8,
        },
        "medium": Object {
          "minHeight": 40,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        },
        "small": Object {
          "minHeight": 32,
          "paddingBottom": 4,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 4,
        },
      },
      "overrides": Object {
        "MuiAvatar": Object {
          "colorDefault": Object {
            "color": "#333333",
          },
        },
        "MuiButton": Object {
          "outlinedPrimary": Object {
            "color": "#333333",
          },
          "outlinedSecondary": Object {
            "color": "#333333",
          },
          "root": Object {
            "fontSize": "0.875rem",
            "minHeight": "40px",
            "padding": "8px 16px",
          },
          "sizeLarge": Object {
            "fontSize": "0.875rem",
            "minHeight": "48px",
          },
          "sizeSmall": Object {
            "fontSize": "0.875rem",
            "minHeight": "32px",
          },
        },
      },
      "palette": Object {
        "background": Object {
          "default": "#FFFFFF",
          "paper": "#FAFAFA",
        },
        "error": Object {
          "contrastText": "#333333",
          "main": "#E74627",
        },
        "primary": Object {
          "contrastText": "#333333",
          "dark": "#EF8426",
          "light": "#FEFDE8",
          "main": "#F4AB34",
        },
        "secondary": Object {
          "contrastText": "#333333",
          "dark": "#FF6B0B",
          "light": "#FFF8E1",
          "main": "#FF6B0B",
        },
        "success": Object {
          "main": "#569A32",
        },
        "text": Object {
          "disabled": "#EEEEEE",
          "hint": "#BBBBBB",
          "primary": "#333333",
          "secondary": "#777777",
        },
        "type": "light",
      },
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": 8,
      "typography": Object {
        "android": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "body1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "body2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 400,
        },
        "button": Object {
          "fontSize": "0.875rem",
          "fontWeight": 600,
        },
        "caption": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "h1": Object {
          "fontSize": "6rem",
          "fontWeight": 300,
        },
        "h2": Object {
          "fontSize": "3.75rem",
          "fontWeight": 300,
        },
        "h3": Object {
          "fontSize": "3rem",
          "fontWeight": 400,
        },
        "h4": Object {
          "fontSize": "2.125rem",
          "fontWeight": 400,
        },
        "h5": Object {
          "fontSize": "1.5rem",
          "fontWeight": 400,
        },
        "h6": Object {
          "fontSize": "1.25rem",
          "fontWeight": 600,
        },
        "iOS": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "overline": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "subtitle1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "subtitle2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 500,
        },
        "web": Object {
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
      },
    }
  }
/>
`;

exports[`TextField component rendering states should match snapshot - TextField (default with empty theme): TextField default with empty theme snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c1 {
  line-height: 1.2;
  padding: 0 0 4px;
}

.c2 {
  border: 0;
  border-radius: px;
  box-sizing: border-box;
  width: 100%;
  line-height: 24px;
  min-height: 48px;
  outline: none;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  padding: 16px;
  resize: vertical;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: 0 0 0 1px;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: 0 0 0 1px;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: 0 0 0 1px;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: 0 0 0 1px;
}

.c2:placeholder-shown {
  box-shadow: undefined 0 0 0 1px;
}

.c2:placeholder-shown {
  box-shadow: undefined 0 0 0 1px;
}

.c2:placeholder-shown {
  box-shadow: undefined 0 0 0 1px;
}

.c2:placeholder-shown {
  box-shadow: undefined 0 0 0 1px;
}

.c2:not(:placeholder-shown) {
  box-shadow: undefined 0 0 0 1px;
}

.c2:hover {
  box-shadow: undefined 0 0 0 1px;
}

.c2:focus {
  box-shadow: undefined 0 0 0 2px;
}

.c3 {
  line-height: 1.2;
  padding: 4px 0 0;
}

<div
  className="c0"
>
  <label
    className="c1"
    disabled={false}
    htmlFor="field"
  >
    Label
  </label>
  <input
    className="c2"
    disabled={false}
    id="field"
    placeholder="Placeholder"
  />
  <span
    className="c3"
    disabled={false}
  >
    Assistive text
  </span>
</div>
`;

exports[`TextField component rendering states should match snapshot - TextField (default): TextField default snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c1 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #BBBBBB;
  line-height: 1.2;
  padding: 0 0 4px;
}

.c2 {
  border: 0;
  border-radius: 4px;
  box-sizing: border-box;
  width: 100%;
  line-height: 24px;
  min-height: 48px;
  outline: none;
  color: #333333;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  padding: 16px;
  resize: vertical;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::-moz-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c2::-webkit-input-placeholder {
  color: #BBBBBB;
}

.c2::-moz-placeholder {
  color: #BBBBBB;
}

.c2:-ms-input-placeholder {
  color: #BBBBBB;
}

.c2::placeholder {
  color: #BBBBBB;
}

.c2:placeholder-shown {
  box-shadow: #BBBBBB 0 0 0 1px;
}

.c2:not(:placeholder-shown) {
  box-shadow: #333333 0 0 0 1px;
}

.c2:hover {
  box-shadow: #777777 0 0 0 1px;
}

.c2:focus {
  box-shadow: #F4AB34 0 0 0 2px;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 400;
  color: #BBBBBB;
  line-height: 1.2;
  padding: 4px 0 0;
}

<div
  className="c0"
>
  <label
    className="c1"
    disabled={false}
    htmlFor="field"
  >
    Label
  </label>
  <input
    className="c2"
    disabled={false}
    id="field"
    placeholder="Placeholder"
  />
  <span
    className="c3"
    disabled={false}
  >
    Assistive text
  </span>
</div>
`;

exports[`TextField component rendering states should match snapshot - TextField (disabled focus): TextField disabled focus snapshot 1`] = `
<TextField
  disabled={true}
  helpText="Assistive text"
  id="field"
  label="Label"
  placeholder="Placeholder"
  theme={
    Object {
      "avatarSizes": Object {
        "large": Object {
          "fontSize": "1rem",
          "size": 48,
        },
        "small": Object {
          "fontSize": ".875rem",
          "size": 32,
        },
        "standard": Object {
          "fontSize": "1rem",
          "size": 40,
        },
        "tiny": Object {
          "fontSize": ".625rem",
          "size": 24,
        },
        "xlarge": Object {
          "fontSize": "1.5rem",
          "size": 80,
        },
      },
      "buttonSize": Object {
        "large": Object {
          "minHeight": 48,
          "paddingBottom": 8,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 8,
        },
        "medium": Object {
          "minHeight": 40,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        },
        "small": Object {
          "minHeight": 32,
          "paddingBottom": 4,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 4,
        },
      },
      "overrides": Object {
        "MuiAvatar": Object {
          "colorDefault": Object {
            "color": "#333333",
          },
        },
        "MuiButton": Object {
          "outlinedPrimary": Object {
            "color": "#333333",
          },
          "outlinedSecondary": Object {
            "color": "#333333",
          },
          "root": Object {
            "fontSize": "0.875rem",
            "minHeight": "40px",
            "padding": "8px 16px",
          },
          "sizeLarge": Object {
            "fontSize": "0.875rem",
            "minHeight": "48px",
          },
          "sizeSmall": Object {
            "fontSize": "0.875rem",
            "minHeight": "32px",
          },
        },
      },
      "palette": Object {
        "background": Object {
          "default": "#FFFFFF",
          "paper": "#FAFAFA",
        },
        "error": Object {
          "contrastText": "#333333",
          "main": "#E74627",
        },
        "primary": Object {
          "contrastText": "#333333",
          "dark": "#EF8426",
          "light": "#FEFDE8",
          "main": "#F4AB34",
        },
        "secondary": Object {
          "contrastText": "#333333",
          "dark": "#FF6B0B",
          "light": "#FFF8E1",
          "main": "#FF6B0B",
        },
        "success": Object {
          "main": "#569A32",
        },
        "text": Object {
          "disabled": "#EEEEEE",
          "hint": "#BBBBBB",
          "primary": "#333333",
          "secondary": "#777777",
        },
        "type": "light",
      },
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": 8,
      "typography": Object {
        "android": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "body1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "body2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 400,
        },
        "button": Object {
          "fontSize": "0.875rem",
          "fontWeight": 600,
        },
        "caption": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "h1": Object {
          "fontSize": "6rem",
          "fontWeight": 300,
        },
        "h2": Object {
          "fontSize": "3.75rem",
          "fontWeight": 300,
        },
        "h3": Object {
          "fontSize": "3rem",
          "fontWeight": 400,
        },
        "h4": Object {
          "fontSize": "2.125rem",
          "fontWeight": 400,
        },
        "h5": Object {
          "fontSize": "1.5rem",
          "fontWeight": 400,
        },
        "h6": Object {
          "fontSize": "1.25rem",
          "fontWeight": 600,
        },
        "iOS": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "overline": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "subtitle1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "subtitle2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 500,
        },
        "web": Object {
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
      },
    }
  }
/>
`;

exports[`TextField component rendering states should match snapshot - TextField (disabled hover): TextField disabled hover snapshot 1`] = `
<TextField
  disabled={true}
  helpText="Assistive text"
  id="field"
  label="Label"
  placeholder="Placeholder"
  theme={
    Object {
      "avatarSizes": Object {
        "large": Object {
          "fontSize": "1rem",
          "size": 48,
        },
        "small": Object {
          "fontSize": ".875rem",
          "size": 32,
        },
        "standard": Object {
          "fontSize": "1rem",
          "size": 40,
        },
        "tiny": Object {
          "fontSize": ".625rem",
          "size": 24,
        },
        "xlarge": Object {
          "fontSize": "1.5rem",
          "size": 80,
        },
      },
      "buttonSize": Object {
        "large": Object {
          "minHeight": 48,
          "paddingBottom": 8,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 8,
        },
        "medium": Object {
          "minHeight": 40,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        },
        "small": Object {
          "minHeight": 32,
          "paddingBottom": 4,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 4,
        },
      },
      "overrides": Object {
        "MuiAvatar": Object {
          "colorDefault": Object {
            "color": "#333333",
          },
        },
        "MuiButton": Object {
          "outlinedPrimary": Object {
            "color": "#333333",
          },
          "outlinedSecondary": Object {
            "color": "#333333",
          },
          "root": Object {
            "fontSize": "0.875rem",
            "minHeight": "40px",
            "padding": "8px 16px",
          },
          "sizeLarge": Object {
            "fontSize": "0.875rem",
            "minHeight": "48px",
          },
          "sizeSmall": Object {
            "fontSize": "0.875rem",
            "minHeight": "32px",
          },
        },
      },
      "palette": Object {
        "background": Object {
          "default": "#FFFFFF",
          "paper": "#FAFAFA",
        },
        "error": Object {
          "contrastText": "#333333",
          "main": "#E74627",
        },
        "primary": Object {
          "contrastText": "#333333",
          "dark": "#EF8426",
          "light": "#FEFDE8",
          "main": "#F4AB34",
        },
        "secondary": Object {
          "contrastText": "#333333",
          "dark": "#FF6B0B",
          "light": "#FFF8E1",
          "main": "#FF6B0B",
        },
        "success": Object {
          "main": "#569A32",
        },
        "text": Object {
          "disabled": "#EEEEEE",
          "hint": "#BBBBBB",
          "primary": "#333333",
          "secondary": "#777777",
        },
        "type": "light",
      },
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": 8,
      "typography": Object {
        "android": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "body1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "body2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 400,
        },
        "button": Object {
          "fontSize": "0.875rem",
          "fontWeight": 600,
        },
        "caption": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "h1": Object {
          "fontSize": "6rem",
          "fontWeight": 300,
        },
        "h2": Object {
          "fontSize": "3.75rem",
          "fontWeight": 300,
        },
        "h3": Object {
          "fontSize": "3rem",
          "fontWeight": 400,
        },
        "h4": Object {
          "fontSize": "2.125rem",
          "fontWeight": 400,
        },
        "h5": Object {
          "fontSize": "1.5rem",
          "fontWeight": 400,
        },
        "h6": Object {
          "fontSize": "1.25rem",
          "fontWeight": 600,
        },
        "iOS": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "overline": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "subtitle1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "subtitle2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 500,
        },
        "web": Object {
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
      },
    }
  }
/>
`;

exports[`TextField component rendering states should match snapshot - TextField (disabled): TextField disabled snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c1 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #EEEEEE;
  line-height: 1.2;
  padding: 0 0 4px;
}

.c2 {
  border: 0;
  border-radius: 4px;
  box-sizing: border-box;
  width: 100%;
  line-height: 24px;
  min-height: 48px;
  outline: none;
  color: #333333;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  padding: 16px;
  resize: vertical;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::-moz-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c2::-webkit-input-placeholder {
  color: #BBBBBB;
}

.c2::-moz-placeholder {
  color: #BBBBBB;
}

.c2:-ms-input-placeholder {
  color: #BBBBBB;
}

.c2::placeholder {
  color: #BBBBBB;
}

.c2:placeholder-shown {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c2:not(:placeholder-shown) {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c2:hover {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c2:focus {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 400;
  color: #EEEEEE;
  line-height: 1.2;
  padding: 4px 0 0;
}

<div
  className="c0"
>
  <label
    className="c1"
    disabled={true}
    htmlFor="field"
  >
    Label
  </label>
  <input
    className="c2"
    disabled={true}
    id="field"
    placeholder="Placeholder"
  />
  <span
    className="c3"
    disabled={true}
  >
    Assistive text
  </span>
</div>
`;

exports[`TextField component rendering states should match snapshot - TextField (error focus): TextField error focus snapshot 1`] = `
<TextField
  helpText="Assistive text"
  id="field"
  label="Label"
  placeholder="Placeholder"
  status="error"
  theme={
    Object {
      "avatarSizes": Object {
        "large": Object {
          "fontSize": "1rem",
          "size": 48,
        },
        "small": Object {
          "fontSize": ".875rem",
          "size": 32,
        },
        "standard": Object {
          "fontSize": "1rem",
          "size": 40,
        },
        "tiny": Object {
          "fontSize": ".625rem",
          "size": 24,
        },
        "xlarge": Object {
          "fontSize": "1.5rem",
          "size": 80,
        },
      },
      "buttonSize": Object {
        "large": Object {
          "minHeight": 48,
          "paddingBottom": 8,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 8,
        },
        "medium": Object {
          "minHeight": 40,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        },
        "small": Object {
          "minHeight": 32,
          "paddingBottom": 4,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 4,
        },
      },
      "overrides": Object {
        "MuiAvatar": Object {
          "colorDefault": Object {
            "color": "#333333",
          },
        },
        "MuiButton": Object {
          "outlinedPrimary": Object {
            "color": "#333333",
          },
          "outlinedSecondary": Object {
            "color": "#333333",
          },
          "root": Object {
            "fontSize": "0.875rem",
            "minHeight": "40px",
            "padding": "8px 16px",
          },
          "sizeLarge": Object {
            "fontSize": "0.875rem",
            "minHeight": "48px",
          },
          "sizeSmall": Object {
            "fontSize": "0.875rem",
            "minHeight": "32px",
          },
        },
      },
      "palette": Object {
        "background": Object {
          "default": "#FFFFFF",
          "paper": "#FAFAFA",
        },
        "error": Object {
          "contrastText": "#333333",
          "main": "#E74627",
        },
        "primary": Object {
          "contrastText": "#333333",
          "dark": "#EF8426",
          "light": "#FEFDE8",
          "main": "#F4AB34",
        },
        "secondary": Object {
          "contrastText": "#333333",
          "dark": "#FF6B0B",
          "light": "#FFF8E1",
          "main": "#FF6B0B",
        },
        "success": Object {
          "main": "#569A32",
        },
        "text": Object {
          "disabled": "#EEEEEE",
          "hint": "#BBBBBB",
          "primary": "#333333",
          "secondary": "#777777",
        },
        "type": "light",
      },
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": 8,
      "typography": Object {
        "android": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "body1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "body2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 400,
        },
        "button": Object {
          "fontSize": "0.875rem",
          "fontWeight": 600,
        },
        "caption": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "h1": Object {
          "fontSize": "6rem",
          "fontWeight": 300,
        },
        "h2": Object {
          "fontSize": "3.75rem",
          "fontWeight": 300,
        },
        "h3": Object {
          "fontSize": "3rem",
          "fontWeight": 400,
        },
        "h4": Object {
          "fontSize": "2.125rem",
          "fontWeight": 400,
        },
        "h5": Object {
          "fontSize": "1.5rem",
          "fontWeight": 400,
        },
        "h6": Object {
          "fontSize": "1.25rem",
          "fontWeight": 600,
        },
        "iOS": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "overline": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "subtitle1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "subtitle2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 500,
        },
        "web": Object {
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
      },
    }
  }
/>
`;

exports[`TextField component rendering states should match snapshot - TextField (error hover): TextField error hover snapshot 1`] = `
<TextField
  helpText="Assistive text"
  id="field"
  label="Label"
  placeholder="Placeholder"
  status="error"
  theme={
    Object {
      "avatarSizes": Object {
        "large": Object {
          "fontSize": "1rem",
          "size": 48,
        },
        "small": Object {
          "fontSize": ".875rem",
          "size": 32,
        },
        "standard": Object {
          "fontSize": "1rem",
          "size": 40,
        },
        "tiny": Object {
          "fontSize": ".625rem",
          "size": 24,
        },
        "xlarge": Object {
          "fontSize": "1.5rem",
          "size": 80,
        },
      },
      "buttonSize": Object {
        "large": Object {
          "minHeight": 48,
          "paddingBottom": 8,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 8,
        },
        "medium": Object {
          "minHeight": 40,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        },
        "small": Object {
          "minHeight": 32,
          "paddingBottom": 4,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 4,
        },
      },
      "overrides": Object {
        "MuiAvatar": Object {
          "colorDefault": Object {
            "color": "#333333",
          },
        },
        "MuiButton": Object {
          "outlinedPrimary": Object {
            "color": "#333333",
          },
          "outlinedSecondary": Object {
            "color": "#333333",
          },
          "root": Object {
            "fontSize": "0.875rem",
            "minHeight": "40px",
            "padding": "8px 16px",
          },
          "sizeLarge": Object {
            "fontSize": "0.875rem",
            "minHeight": "48px",
          },
          "sizeSmall": Object {
            "fontSize": "0.875rem",
            "minHeight": "32px",
          },
        },
      },
      "palette": Object {
        "background": Object {
          "default": "#FFFFFF",
          "paper": "#FAFAFA",
        },
        "error": Object {
          "contrastText": "#333333",
          "main": "#E74627",
        },
        "primary": Object {
          "contrastText": "#333333",
          "dark": "#EF8426",
          "light": "#FEFDE8",
          "main": "#F4AB34",
        },
        "secondary": Object {
          "contrastText": "#333333",
          "dark": "#FF6B0B",
          "light": "#FFF8E1",
          "main": "#FF6B0B",
        },
        "success": Object {
          "main": "#569A32",
        },
        "text": Object {
          "disabled": "#EEEEEE",
          "hint": "#BBBBBB",
          "primary": "#333333",
          "secondary": "#777777",
        },
        "type": "light",
      },
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": 8,
      "typography": Object {
        "android": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "body1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "body2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 400,
        },
        "button": Object {
          "fontSize": "0.875rem",
          "fontWeight": 600,
        },
        "caption": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "h1": Object {
          "fontSize": "6rem",
          "fontWeight": 300,
        },
        "h2": Object {
          "fontSize": "3.75rem",
          "fontWeight": 300,
        },
        "h3": Object {
          "fontSize": "3rem",
          "fontWeight": 400,
        },
        "h4": Object {
          "fontSize": "2.125rem",
          "fontWeight": 400,
        },
        "h5": Object {
          "fontSize": "1.5rem",
          "fontWeight": 400,
        },
        "h6": Object {
          "fontSize": "1.25rem",
          "fontWeight": 600,
        },
        "iOS": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "overline": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "subtitle1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "subtitle2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 500,
        },
        "web": Object {
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
      },
    }
  }
/>
`;

exports[`TextField component rendering states should match snapshot - TextField (error): TextField error snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c1 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #E74627;
  line-height: 1.2;
  padding: 0 0 4px;
}

.c2 {
  border: 0;
  border-radius: 4px;
  box-sizing: border-box;
  width: 100%;
  line-height: 24px;
  min-height: 48px;
  outline: none;
  color: #333333;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  padding: 16px;
  resize: vertical;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::-moz-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c2::-webkit-input-placeholder {
  color: #BBBBBB;
}

.c2::-moz-placeholder {
  color: #BBBBBB;
}

.c2:-ms-input-placeholder {
  color: #BBBBBB;
}

.c2::placeholder {
  color: #BBBBBB;
}

.c2:placeholder-shown {
  box-shadow: #E74627 0 0 0 2px;
}

.c2:not(:placeholder-shown) {
  box-shadow: #E74627 0 0 0 2px;
}

.c2:hover {
  box-shadow: #E74627 0 0 0 2px;
}

.c2:focus {
  box-shadow: #E74627 0 0 0 2px;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 400;
  color: #E74627;
  line-height: 1.2;
  padding: 4px 0 0;
}

<div
  className="c0"
>
  <label
    className="c1"
    disabled={false}
    htmlFor="field"
  >
    Label
  </label>
  <input
    className="c2"
    disabled={false}
    id="field"
    placeholder="Placeholder"
  />
  <span
    className="c3"
    disabled={false}
  >
    Assistive text
  </span>
</div>
`;

exports[`TextField component rendering states should match snapshot - TextField (filled focus): TextField filled focus snapshot 1`] = `
<TextField
  helpText="Assistive text"
  id="field"
  label="Label"
  placeholder="Placeholder"
  theme={
    Object {
      "avatarSizes": Object {
        "large": Object {
          "fontSize": "1rem",
          "size": 48,
        },
        "small": Object {
          "fontSize": ".875rem",
          "size": 32,
        },
        "standard": Object {
          "fontSize": "1rem",
          "size": 40,
        },
        "tiny": Object {
          "fontSize": ".625rem",
          "size": 24,
        },
        "xlarge": Object {
          "fontSize": "1.5rem",
          "size": 80,
        },
      },
      "buttonSize": Object {
        "large": Object {
          "minHeight": 48,
          "paddingBottom": 8,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 8,
        },
        "medium": Object {
          "minHeight": 40,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        },
        "small": Object {
          "minHeight": 32,
          "paddingBottom": 4,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 4,
        },
      },
      "overrides": Object {
        "MuiAvatar": Object {
          "colorDefault": Object {
            "color": "#333333",
          },
        },
        "MuiButton": Object {
          "outlinedPrimary": Object {
            "color": "#333333",
          },
          "outlinedSecondary": Object {
            "color": "#333333",
          },
          "root": Object {
            "fontSize": "0.875rem",
            "minHeight": "40px",
            "padding": "8px 16px",
          },
          "sizeLarge": Object {
            "fontSize": "0.875rem",
            "minHeight": "48px",
          },
          "sizeSmall": Object {
            "fontSize": "0.875rem",
            "minHeight": "32px",
          },
        },
      },
      "palette": Object {
        "background": Object {
          "default": "#FFFFFF",
          "paper": "#FAFAFA",
        },
        "error": Object {
          "contrastText": "#333333",
          "main": "#E74627",
        },
        "primary": Object {
          "contrastText": "#333333",
          "dark": "#EF8426",
          "light": "#FEFDE8",
          "main": "#F4AB34",
        },
        "secondary": Object {
          "contrastText": "#333333",
          "dark": "#FF6B0B",
          "light": "#FFF8E1",
          "main": "#FF6B0B",
        },
        "success": Object {
          "main": "#569A32",
        },
        "text": Object {
          "disabled": "#EEEEEE",
          "hint": "#BBBBBB",
          "primary": "#333333",
          "secondary": "#777777",
        },
        "type": "light",
      },
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": 8,
      "typography": Object {
        "android": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "body1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "body2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 400,
        },
        "button": Object {
          "fontSize": "0.875rem",
          "fontWeight": 600,
        },
        "caption": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "h1": Object {
          "fontSize": "6rem",
          "fontWeight": 300,
        },
        "h2": Object {
          "fontSize": "3.75rem",
          "fontWeight": 300,
        },
        "h3": Object {
          "fontSize": "3rem",
          "fontWeight": 400,
        },
        "h4": Object {
          "fontSize": "2.125rem",
          "fontWeight": 400,
        },
        "h5": Object {
          "fontSize": "1.5rem",
          "fontWeight": 400,
        },
        "h6": Object {
          "fontSize": "1.25rem",
          "fontWeight": 600,
        },
        "iOS": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "overline": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "subtitle1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "subtitle2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 500,
        },
        "web": Object {
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
      },
    }
  }
  value="some value"
/>
`;

exports[`TextField component rendering states should match snapshot - TextField (filled hover): TextField filled hover snapshot 1`] = `
<TextField
  helpText="Assistive text"
  id="field"
  label="Label"
  placeholder="Placeholder"
  theme={
    Object {
      "avatarSizes": Object {
        "large": Object {
          "fontSize": "1rem",
          "size": 48,
        },
        "small": Object {
          "fontSize": ".875rem",
          "size": 32,
        },
        "standard": Object {
          "fontSize": "1rem",
          "size": 40,
        },
        "tiny": Object {
          "fontSize": ".625rem",
          "size": 24,
        },
        "xlarge": Object {
          "fontSize": "1.5rem",
          "size": 80,
        },
      },
      "buttonSize": Object {
        "large": Object {
          "minHeight": 48,
          "paddingBottom": 8,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 8,
        },
        "medium": Object {
          "minHeight": 40,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        },
        "small": Object {
          "minHeight": 32,
          "paddingBottom": 4,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 4,
        },
      },
      "overrides": Object {
        "MuiAvatar": Object {
          "colorDefault": Object {
            "color": "#333333",
          },
        },
        "MuiButton": Object {
          "outlinedPrimary": Object {
            "color": "#333333",
          },
          "outlinedSecondary": Object {
            "color": "#333333",
          },
          "root": Object {
            "fontSize": "0.875rem",
            "minHeight": "40px",
            "padding": "8px 16px",
          },
          "sizeLarge": Object {
            "fontSize": "0.875rem",
            "minHeight": "48px",
          },
          "sizeSmall": Object {
            "fontSize": "0.875rem",
            "minHeight": "32px",
          },
        },
      },
      "palette": Object {
        "background": Object {
          "default": "#FFFFFF",
          "paper": "#FAFAFA",
        },
        "error": Object {
          "contrastText": "#333333",
          "main": "#E74627",
        },
        "primary": Object {
          "contrastText": "#333333",
          "dark": "#EF8426",
          "light": "#FEFDE8",
          "main": "#F4AB34",
        },
        "secondary": Object {
          "contrastText": "#333333",
          "dark": "#FF6B0B",
          "light": "#FFF8E1",
          "main": "#FF6B0B",
        },
        "success": Object {
          "main": "#569A32",
        },
        "text": Object {
          "disabled": "#EEEEEE",
          "hint": "#BBBBBB",
          "primary": "#333333",
          "secondary": "#777777",
        },
        "type": "light",
      },
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": 8,
      "typography": Object {
        "android": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "body1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "body2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 400,
        },
        "button": Object {
          "fontSize": "0.875rem",
          "fontWeight": 600,
        },
        "caption": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "h1": Object {
          "fontSize": "6rem",
          "fontWeight": 300,
        },
        "h2": Object {
          "fontSize": "3.75rem",
          "fontWeight": 300,
        },
        "h3": Object {
          "fontSize": "3rem",
          "fontWeight": 400,
        },
        "h4": Object {
          "fontSize": "2.125rem",
          "fontWeight": 400,
        },
        "h5": Object {
          "fontSize": "1.5rem",
          "fontWeight": 400,
        },
        "h6": Object {
          "fontSize": "1.25rem",
          "fontWeight": 600,
        },
        "iOS": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "overline": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "subtitle1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "subtitle2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 500,
        },
        "web": Object {
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
      },
    }
  }
  value="some value"
/>
`;

exports[`TextField component rendering states should match snapshot - TextField (filled): TextField filled snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c1 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #BBBBBB;
  line-height: 1.2;
  padding: 0 0 4px;
}

.c2 {
  border: 0;
  border-radius: 4px;
  box-sizing: border-box;
  width: 100%;
  line-height: 24px;
  min-height: 48px;
  outline: none;
  color: #333333;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  padding: 16px;
  resize: vertical;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::-moz-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c2::-webkit-input-placeholder {
  color: #BBBBBB;
}

.c2::-moz-placeholder {
  color: #BBBBBB;
}

.c2:-ms-input-placeholder {
  color: #BBBBBB;
}

.c2::placeholder {
  color: #BBBBBB;
}

.c2:placeholder-shown {
  box-shadow: #BBBBBB 0 0 0 1px;
}

.c2:not(:placeholder-shown) {
  box-shadow: #333333 0 0 0 1px;
}

.c2:hover {
  box-shadow: #777777 0 0 0 1px;
}

.c2:focus {
  box-shadow: #F4AB34 0 0 0 2px;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 400;
  color: #BBBBBB;
  line-height: 1.2;
  padding: 4px 0 0;
}

<div
  className="c0"
>
  <label
    className="c1"
    disabled={false}
    htmlFor="field"
  >
    Label
  </label>
  <input
    className="c2"
    disabled={false}
    id="field"
    placeholder="Placeholder"
    value="some value"
  />
  <span
    className="c3"
    disabled={false}
  >
    Assistive text
  </span>
</div>
`;

exports[`TextField component rendering states should match snapshot - TextField (multiline): TextField multiline snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c1 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #BBBBBB;
  line-height: 1.2;
  padding: 0 0 4px;
}

.c2 {
  border: 0;
  border-radius: 4px;
  box-sizing: border-box;
  width: 100%;
  line-height: 24px;
  min-height: 48px;
  outline: none;
  color: #333333;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  padding: 16px;
  resize: vertical;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::-moz-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c2::-webkit-input-placeholder {
  color: #BBBBBB;
}

.c2::-moz-placeholder {
  color: #BBBBBB;
}

.c2:-ms-input-placeholder {
  color: #BBBBBB;
}

.c2::placeholder {
  color: #BBBBBB;
}

.c2:placeholder-shown {
  box-shadow: #BBBBBB 0 0 0 1px;
}

.c2:not(:placeholder-shown) {
  box-shadow: #333333 0 0 0 1px;
}

.c2:hover {
  box-shadow: #777777 0 0 0 1px;
}

.c2:focus {
  box-shadow: #F4AB34 0 0 0 2px;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 400;
  color: #BBBBBB;
  line-height: 1.2;
  padding: 4px 0 0;
}

<div
  className="c0"
>
  <label
    className="c1"
    disabled={false}
    htmlFor="field"
  >
    Label
  </label>
  <textarea
    className="c2"
    disabled={false}
    id="field"
    placeholder="Placeholder"
  />
  <span
    className="c3"
    disabled={false}
  >
    Assistive text
  </span>
</div>
`;

exports[`TextField component rendering states should match snapshot - TextField (property forwarded): TextField property forwarded snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c1 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #BBBBBB;
  line-height: 1.2;
  padding: 0 0 4px;
}

.c2 {
  border: 0;
  border-radius: 4px;
  box-sizing: border-box;
  width: 100%;
  line-height: 24px;
  min-height: 48px;
  outline: none;
  color: #333333;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  padding: 16px;
  resize: vertical;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::-moz-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c2::-webkit-input-placeholder {
  color: #BBBBBB;
}

.c2::-moz-placeholder {
  color: #BBBBBB;
}

.c2:-ms-input-placeholder {
  color: #BBBBBB;
}

.c2::placeholder {
  color: #BBBBBB;
}

.c2:placeholder-shown {
  box-shadow: #BBBBBB 0 0 0 1px;
}

.c2:not(:placeholder-shown) {
  box-shadow: #333333 0 0 0 1px;
}

.c2:hover {
  box-shadow: #777777 0 0 0 1px;
}

.c2:focus {
  box-shadow: #F4AB34 0 0 0 2px;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 400;
  color: #BBBBBB;
  line-height: 1.2;
  padding: 4px 0 0;
}

<div
  className="c0"
>
  <label
    className="c1"
    disabled={false}
    htmlFor="field"
  >
    Label
  </label>
  <input
    className="c2"
    disabled={false}
    id="field"
    placeholder="Placeholder"
    type="password"
  />
  <span
    className="c3"
    disabled={false}
  >
    Assistive text
  </span>
</div>
`;

exports[`TextField component rendering states should match snapshot - TextField (required): TextField required snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c1 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #BBBBBB;
  line-height: 1.2;
  padding: 0 0 4px;
}

.c2 {
  border: 0;
  border-radius: 4px;
  box-sizing: border-box;
  width: 100%;
  line-height: 24px;
  min-height: 48px;
  outline: none;
  color: #333333;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  padding: 16px;
  resize: vertical;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::-moz-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c2::-webkit-input-placeholder {
  color: #BBBBBB;
}

.c2::-moz-placeholder {
  color: #BBBBBB;
}

.c2:-ms-input-placeholder {
  color: #BBBBBB;
}

.c2::placeholder {
  color: #BBBBBB;
}

.c2:placeholder-shown {
  box-shadow: #BBBBBB 0 0 0 1px;
}

.c2:not(:placeholder-shown) {
  box-shadow: #333333 0 0 0 1px;
}

.c2:hover {
  box-shadow: #777777 0 0 0 1px;
}

.c2:focus {
  box-shadow: #F4AB34 0 0 0 2px;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 400;
  color: #BBBBBB;
  line-height: 1.2;
  padding: 4px 0 0;
}

<div
  className="c0"
>
  <label
    className="c1"
    disabled={false}
    htmlFor="field"
  >
    Label *
  </label>
  <input
    className="c2"
    disabled={false}
    id="field"
    placeholder="Placeholder"
  />
  <span
    className="c3"
    disabled={false}
  >
    Assistive text
  </span>
</div>
`;

exports[`TextField component rendering states should match snapshot - TextField (success focus): TextField success focus snapshot 1`] = `
<TextField
  helpText="Assistive text"
  id="field"
  label="Label"
  placeholder="Placeholder"
  status="success"
  theme={
    Object {
      "avatarSizes": Object {
        "large": Object {
          "fontSize": "1rem",
          "size": 48,
        },
        "small": Object {
          "fontSize": ".875rem",
          "size": 32,
        },
        "standard": Object {
          "fontSize": "1rem",
          "size": 40,
        },
        "tiny": Object {
          "fontSize": ".625rem",
          "size": 24,
        },
        "xlarge": Object {
          "fontSize": "1.5rem",
          "size": 80,
        },
      },
      "buttonSize": Object {
        "large": Object {
          "minHeight": 48,
          "paddingBottom": 8,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 8,
        },
        "medium": Object {
          "minHeight": 40,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        },
        "small": Object {
          "minHeight": 32,
          "paddingBottom": 4,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 4,
        },
      },
      "overrides": Object {
        "MuiAvatar": Object {
          "colorDefault": Object {
            "color": "#333333",
          },
        },
        "MuiButton": Object {
          "outlinedPrimary": Object {
            "color": "#333333",
          },
          "outlinedSecondary": Object {
            "color": "#333333",
          },
          "root": Object {
            "fontSize": "0.875rem",
            "minHeight": "40px",
            "padding": "8px 16px",
          },
          "sizeLarge": Object {
            "fontSize": "0.875rem",
            "minHeight": "48px",
          },
          "sizeSmall": Object {
            "fontSize": "0.875rem",
            "minHeight": "32px",
          },
        },
      },
      "palette": Object {
        "background": Object {
          "default": "#FFFFFF",
          "paper": "#FAFAFA",
        },
        "error": Object {
          "contrastText": "#333333",
          "main": "#E74627",
        },
        "primary": Object {
          "contrastText": "#333333",
          "dark": "#EF8426",
          "light": "#FEFDE8",
          "main": "#F4AB34",
        },
        "secondary": Object {
          "contrastText": "#333333",
          "dark": "#FF6B0B",
          "light": "#FFF8E1",
          "main": "#FF6B0B",
        },
        "success": Object {
          "main": "#569A32",
        },
        "text": Object {
          "disabled": "#EEEEEE",
          "hint": "#BBBBBB",
          "primary": "#333333",
          "secondary": "#777777",
        },
        "type": "light",
      },
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": 8,
      "typography": Object {
        "android": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "body1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "body2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 400,
        },
        "button": Object {
          "fontSize": "0.875rem",
          "fontWeight": 600,
        },
        "caption": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "h1": Object {
          "fontSize": "6rem",
          "fontWeight": 300,
        },
        "h2": Object {
          "fontSize": "3.75rem",
          "fontWeight": 300,
        },
        "h3": Object {
          "fontSize": "3rem",
          "fontWeight": 400,
        },
        "h4": Object {
          "fontSize": "2.125rem",
          "fontWeight": 400,
        },
        "h5": Object {
          "fontSize": "1.5rem",
          "fontWeight": 400,
        },
        "h6": Object {
          "fontSize": "1.25rem",
          "fontWeight": 600,
        },
        "iOS": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "overline": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "subtitle1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "subtitle2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 500,
        },
        "web": Object {
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
      },
    }
  }
/>
`;

exports[`TextField component rendering states should match snapshot - TextField (success hover): TextField success hover snapshot 1`] = `
<TextField
  helpText="Assistive text"
  id="field"
  label="Label"
  placeholder="Placeholder"
  status="success"
  theme={
    Object {
      "avatarSizes": Object {
        "large": Object {
          "fontSize": "1rem",
          "size": 48,
        },
        "small": Object {
          "fontSize": ".875rem",
          "size": 32,
        },
        "standard": Object {
          "fontSize": "1rem",
          "size": 40,
        },
        "tiny": Object {
          "fontSize": ".625rem",
          "size": 24,
        },
        "xlarge": Object {
          "fontSize": "1.5rem",
          "size": 80,
        },
      },
      "buttonSize": Object {
        "large": Object {
          "minHeight": 48,
          "paddingBottom": 8,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 8,
        },
        "medium": Object {
          "minHeight": 40,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        },
        "small": Object {
          "minHeight": 32,
          "paddingBottom": 4,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 4,
        },
      },
      "overrides": Object {
        "MuiAvatar": Object {
          "colorDefault": Object {
            "color": "#333333",
          },
        },
        "MuiButton": Object {
          "outlinedPrimary": Object {
            "color": "#333333",
          },
          "outlinedSecondary": Object {
            "color": "#333333",
          },
          "root": Object {
            "fontSize": "0.875rem",
            "minHeight": "40px",
            "padding": "8px 16px",
          },
          "sizeLarge": Object {
            "fontSize": "0.875rem",
            "minHeight": "48px",
          },
          "sizeSmall": Object {
            "fontSize": "0.875rem",
            "minHeight": "32px",
          },
        },
      },
      "palette": Object {
        "background": Object {
          "default": "#FFFFFF",
          "paper": "#FAFAFA",
        },
        "error": Object {
          "contrastText": "#333333",
          "main": "#E74627",
        },
        "primary": Object {
          "contrastText": "#333333",
          "dark": "#EF8426",
          "light": "#FEFDE8",
          "main": "#F4AB34",
        },
        "secondary": Object {
          "contrastText": "#333333",
          "dark": "#FF6B0B",
          "light": "#FFF8E1",
          "main": "#FF6B0B",
        },
        "success": Object {
          "main": "#569A32",
        },
        "text": Object {
          "disabled": "#EEEEEE",
          "hint": "#BBBBBB",
          "primary": "#333333",
          "secondary": "#777777",
        },
        "type": "light",
      },
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": 8,
      "typography": Object {
        "android": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "body1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "body2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 400,
        },
        "button": Object {
          "fontSize": "0.875rem",
          "fontWeight": 600,
        },
        "caption": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "h1": Object {
          "fontSize": "6rem",
          "fontWeight": 300,
        },
        "h2": Object {
          "fontSize": "3.75rem",
          "fontWeight": 300,
        },
        "h3": Object {
          "fontSize": "3rem",
          "fontWeight": 400,
        },
        "h4": Object {
          "fontSize": "2.125rem",
          "fontWeight": 400,
        },
        "h5": Object {
          "fontSize": "1.5rem",
          "fontWeight": 400,
        },
        "h6": Object {
          "fontSize": "1.25rem",
          "fontWeight": 600,
        },
        "iOS": Object {
          "fontFamily": "System",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
        "overline": Object {
          "fontSize": "0.75rem",
          "fontWeight": 400,
        },
        "subtitle1": Object {
          "fontSize": "1rem",
          "fontWeight": 400,
        },
        "subtitle2": Object {
          "fontSize": "0.875rem",
          "fontWeight": 500,
        },
        "web": Object {
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
          "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
          "fontFamilyBrand3": undefined,
          "fontWeightBold": 700,
          "fontWeightLight": 300,
          "fontWeightMedium": 500,
          "fontWeightRegular": 400,
        },
      },
    }
  }
/>
`;

exports[`TextField component rendering states should match snapshot - TextField (success): TextField success snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c1 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #569A32;
  line-height: 1.2;
  padding: 0 0 4px;
}

.c2 {
  border: 0;
  border-radius: 4px;
  box-sizing: border-box;
  width: 100%;
  line-height: 24px;
  min-height: 48px;
  outline: none;
  color: #333333;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  padding: 16px;
  resize: vertical;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::-moz-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c2::-webkit-input-placeholder {
  color: #BBBBBB;
}

.c2::-moz-placeholder {
  color: #BBBBBB;
}

.c2:-ms-input-placeholder {
  color: #BBBBBB;
}

.c2::placeholder {
  color: #BBBBBB;
}

.c2:placeholder-shown {
  box-shadow: #569A32 0 0 0 1px;
}

.c2:not(:placeholder-shown) {
  box-shadow: #569A32 0 0 0 1px;
}

.c2:hover {
  box-shadow: #569A32 0 0 0 1px;
}

.c2:focus {
  box-shadow: #569A32 0 0 0 1px;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 400;
  color: #569A32;
  line-height: 1.2;
  padding: 4px 0 0;
}

<div
  className="c0"
>
  <label
    className="c1"
    disabled={false}
    htmlFor="field"
  >
    Label
  </label>
  <input
    className="c2"
    disabled={false}
    id="field"
    placeholder="Placeholder"
  />
  <span
    className="c3"
    disabled={false}
  >
    Assistive text
  </span>
</div>
`;

exports[`TextField component rendering states should match snapshot - TextField (theme change): TextField theme change snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c1 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #BBBBBB;
  line-height: 1.2;
  padding: 0 0 4px;
}

.c2 {
  border: 0;
  border-radius: 4px;
  box-sizing: border-box;
  width: 100%;
  line-height: 24px;
  min-height: 48px;
  outline: none;
  color: #333333;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  padding: 16px;
  resize: vertical;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::-moz-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled::placeholder,
.c2:disabled:hover {
  color: #EEEEEE;
}

.c2:disabled,
.c2:disabled:hover {
  box-shadow: #EEEEEE 0 0 0 1px;
}

.c2::-webkit-input-placeholder {
  color: #BBBBBB;
}

.c2::-moz-placeholder {
  color: #BBBBBB;
}

.c2:-ms-input-placeholder {
  color: #BBBBBB;
}

.c2::placeholder {
  color: #BBBBBB;
}

.c2:placeholder-shown {
  box-shadow: #BBBBBB 0 0 0 1px;
}

.c2:not(:placeholder-shown) {
  box-shadow: #333333 0 0 0 1px;
}

.c2:hover {
  box-shadow: #777777 0 0 0 1px;
}

.c2:focus {
  box-shadow: #F4AB34 0 0 0 2px;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 400;
  color: #BBBBBB;
  line-height: 1.2;
  padding: 4px 0 0;
}

<div
  className="c0"
>
  <label
    className="c1"
    disabled={false}
    htmlFor="field"
  >
    Label
  </label>
  <input
    className="c2"
    disabled={false}
    id="field"
    placeholder="Placeholder"
  />
  <span
    className="c3"
    disabled={false}
  >
    Assistive text
  </span>
</div>
`;
